<resources>
    <string name="app_name">Assignment</string>
    <string name="budget_text">Budgeting Tools</string>
    <string name="tip_text">Financial Tips and Tricks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculate_text">Calculate Expense</string>
    <string name="summary_text">Summary</string>
    <string name="password_text">Password</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account"><u>Don\'t have an account?</u></string>
    <string name="forgot_your_password"><u>Forgot your password?</u></string>
    <string name="usernameRegister_text">Username<b><font color="Red">*</font></b></string>
    <string name="emailRegister_text">Email<b><font color="Red">*</font></b></string>
    <string name="passwordRegister_text">Password<b><font color="Red">*</font></b></string>
    <string name="confirmPassword_text">Confirm Password<b><font color="Red">*</font></b></string>
    <string name="loanAmountRegister_text">Loan Amount</string>
    <string name="interestRate_text">Interest Rate %</string>
    <string name="budgetWarning_text">Budget Warning %</string>
    <string name="mandatoryField_text"><b><font color="Red">*</font></b> - Mandatory Field</string>
    <string-array name="Months">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

</resources>