<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BudgetFragment">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:divider="?android:dividerHorizontal"
        android:showDividers="middle">

        <FrameLayout
            android:id="@+id/frameCalculate"
            android:layout_width="match_parent"
            android:layout_height="384dp"
            android:background="@color/yellow"


            >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|center"
                android:layout_marginTop="40dp"
                android:clickable="false"
                android:text="@string/budget_text"
                android:textSize="34sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnCalculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/calculate" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="40dp"
                android:clickable="false"
                android:text="@string/calculate_text"
                android:textSize="34sp"
                android:textStyle="bold" />

        </FrameLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@id/frameCalculate"
            android:background="#000000" />

        <FrameLayout
            android:id="@+id/frameSummary"
            android:layout_width="match_parent"
            android:layout_height="384dp"
            android:layout_below="@id/divider"
            android:background="@color/yellow">

            <ImageButton
                android:id="@+id/btnSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/summary" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="40dp"
                android:clickable="false"
                android:text="@string/summary_text"
                android:textSize="34sp"
                android:textStyle="bold" />
        </FrameLayout>

    </RelativeLayout>
</FrameLayout>